# SomethingRogueLike

./: .gitignore  CMakeLists.txt  _.cmake
auto/: battle.h  inv.h  skill.h  stat.h  str.h
include/: ArrLike.h  CursorLike.h  UI.h  act.h  battle.h  err.h  game.h  inv.h  skill.h  stat.h  str.h  supermenu.h  unit.h
source/: battle.c  main.c
